--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -107,7 +107,7 @@ http {
 
 	upstream app_server {
 		server localhost:8888 fail_timeout=0;
- 	}
+	}
 
 	server {
 		listen <%= ENV["PORT"] %>;
@@ -130,15 +130,33 @@ http {
 			rewrite ^ https://$host$request_uri? permanent;
 		}
 
-		location / {
-			proxy_pass http://app_server;
-		}
+		<% if ENV['USE_FASTBOOT'] == "staging-experimental" %>
+			# Experimentally send all non-backend requests to FastBoot
 
-		<% if ENV['USE_FASTBOOT'] %>
-		# Just in case, only forward "/policies" to Ember for a moment
-		location = /policies {
-			proxy_pass http://localhost:9000;
-		}
+			location /api/ {
+				proxy_pass http://app_server;
+			}
+
+			# FastBoot
+			location / {
+				proxy_pass http://localhost:9000;
+			}
+		<% elsif ['USE_FASTBOOT'] %>
+			# Fastboot is enabled only for allowed paths
+
+			location = /policies {
+				proxy_pass http://localhost:9000;
+			}
+
+			location / {
+				proxy_pass http://app_server;
+			}
+		<% else %>
+			# FastBoot is disabled, backend sends the static Ember index HTML for non-backend paths
+
+			location / {
+				proxy_pass http://app_server;
+			}
 		<% end %>
 
 		location ~ ^/api/v./crates/new$ {
