Fix padding for exact match copy notifications
Divs inside of exact matches get a lot of padding, whereas other search
results don't. Defining 0 padding for this div makes  the positioning
correct.

--- a/app/styles/crate.scss
+++ b/app/styles/crate.scss
@@ -173,6 +173,7 @@
             .copy-notification {
                 top: -1.25rem;
                 left: 0;
+                padding: 0;
                 text-align: left;
                 width: 4rem;
 
