Revert "replace jQuery with native logic"
This reverts commit e6e3c6be295cd3e5318978335a7ac4d37d21bf61.

--- a/app/templates/components/api-token-row.hbs
+++ b/app/templates/components/api-token-row.hbs
@@ -6,10 +6,8 @@
           placeholder="New token name"
           disabled=api_token.isSaving
           value=api_token.name
-          autofocus="autofocus"
-          enter="saveToken"
-          data-test-focused-input=true
-      }}
+          autofocus=true
+          enter="saveToken"}}
     {{else}}
       {{ api_token.name }}
     {{/if}}
