Revert "Revert "replace jQuery with native logic""
This reverts commit 34ac4e098204266b18c8b941245b9152804ee0d5.

--- a/app/templates/components/api-token-row.hbs
+++ b/app/templates/components/api-token-row.hbs
@@ -6,8 +6,10 @@
           placeholder="New token name"
           disabled=api_token.isSaving
           value=api_token.name
-          autofocus=true
-          enter="saveToken"}}
+          autofocus="autofocus"
+          enter="saveToken"
+          data-test-focused-input=true
+      }}
     {{else}}
       {{ api_token.name }}
     {{/if}}
