Add notification select all/none button
Also add wording to clarify that crate owners may turn notifications on
or off for each crate.

--- a/app/styles/me.scss
+++ b/app/styles/me.scss
@@ -143,6 +143,10 @@
         }
     }
 
+    .button-container {
+        margin-right: 1rem;
+    }
+
     ul {
         padding: 0;
         @include flex-grow(1);
