fix <a href> where {{ repository }} should have been used

--- a/app/templates/components/badge-bitbucket-pipelines.hbs
+++ b/app/templates/components/badge-bitbucket-pipelines.hbs
@@ -1,4 +1,4 @@
-<a href="https://bitbucket.org/delan/nonymous/addon/pipelines/home#!/results/branch/{{ branch }}/page/1">
+<a href="https://bitbucket.org/{{ repository }}/addon/pipelines/home#!/results/branch/{{ branch }}/page/1">
   <img
       src="https://img.shields.io/bitbucket/pipelines/{{ repository }}/{{ branch }}"
       alt="{{ text }}"
