For "Just Updated" link to the specific version

--- a/app/templates/components/crate-list-newest.hbs
+++ b/app/templates/components/crate-list-newest.hbs
@@ -1,7 +1,7 @@
 <ol>
   {{#each crates as |crate index|}}
     <li>
-      {{#link-to 'crate' crate.id class='name' data-test-crate-link=index}}
+      {{#link-to 'crate.version' crate.id crate.newest_version class='name' data-test-crate-link=index}}
         <span>{{ crate.name }} ({{ crate.newest_version }})</span>
         <div class='arrow-in-list'>
           {{svg-jar "right-arrow"}}
