Adjust svg path to start with a slash

--- a/app/styles/me.scss
+++ b/app/styles/me.scss
@@ -208,7 +208,7 @@
             &:after {
                 background-color: #cfc487;
                 border-color: #cfc487;
-                background-image: url('assets/check-mark.svg');
+                background-image: url('/assets/check-mark.svg');
                 background-repeat: no-repeat;
                 background-position: 3px 4px;
             }
