Include component for drawing download graph
Add a new component which is tasked with taking the `.versions` array of
the `crate` model and showing a bar graph of the downloaded versions,
broken up by `major.minor` semver groups.

This component is heavily influenced by the `download-graph` component,
which performs a more complex function on the crate home page.

Issue #1036

--- a/app/templates/crate/versions.hbs
+++ b/app/templates/crate/versions.hbs
@@ -10,6 +10,10 @@
   </span>
 </div>
 
+<div class="graph">
+  {{versions-graph data=model.versions}}
+</div>
+
 <div id='crate-all-versions' class='white-rows'>
   {{#each model.versions as |version|}}
     <div class='row'>
