Fix accessibility problems with the search pagination
The problem was that the next/prev links didn't have any text. For some
reason, the pagination markup on this page was different than, say, that
in crates.hbs. We really should fix #8 for real someday 😂

--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -79,17 +79,17 @@
     {{/each}}
   </div>
 
-  <div class='pagination'>
-    <LinkTo @query={{hash page=this.prevPage}} class="prev">
+  <nav class='pagination' aria-label="Pagination navigation">
+    <LinkTo @query={{hash page=this.prevPage}} class="prev" rel="prev" title="previous page" data-test-pagination-prev>
       {{svg-jar "left-pag"}}
     </LinkTo>
     {{#each this.pages as |page|}}
-      <LinkTo @query={{hash page=page}}>{{ page }}</LinkTo>
+      <LinkTo @query={{hash page=page}} @title={{concat "Go to page " page}}>{{ page }}</LinkTo>
     {{/each}}
-    <LinkTo @query={{hash page=this.nextPage}} class="next">
+    <LinkTo @query={{hash page=this.nextPage}} class="next" rel="next" title="next page" data-test-pagination-next>
       {{svg-jar "right-pag"}}
     </LinkTo>
-  </div>
+  </nav>
 {{else}}
   <div id="no-results">
     <h2>0 crates found. <a href='https://doc.rust-lang.org/cargo/getting-started/'>Get started</a> and create your own.</h2>
