Update `ember-template-lint` to v1.12.1

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,7 +6,7 @@
 <nav id="header">
   {{#link-to "index" tabindex="-1"}}
     <img src="/assets/Cargo-Logo-Small.png" id="logo"
-         height=100 width=100 alt="Cargo Logo">
+         height="100" width="100" alt="Cargo Logo">
   {{/link-to}}
   {{#link-to "index"}}
     <h1>
