--- a/app/templates/crate/versions.hbs
+++ b/app/templates/crate/versions.hbs
@@ -11,8 +11,8 @@
 </div>
 
 <div class="graph">
-  <h4>Downloads per minor version</h4>
-  {{versions-graph data=model.versions}}
+  <h4>Downloads per minor version in the last 90 days</h4>
+  {{versions-graph model=model}}
 </div>
 
 <div id='crate-all-versions' class='white-rows'>
