Use the percy media query method to hide the downloads graph from percy

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -359,3 +359,9 @@ abbr[title] {
     text-decoration: none;
     border-bottom: 1px dotted;
 }
+
+@media only percy {
+    #crate-downloads .graph {
+       display: none;
+    }
+}
