Convert curly component to angle bracket component invocations
see https://emberjs.github.io/rfcs/0311-angle-bracket-invocation.html

--- a/app/templates/catch-all.hbs
+++ b/app/templates/catch-all.hbs
@@ -3,9 +3,12 @@
 <p id='p404'>
   Perhaps a search of the site may help?
 
-  {{input type="text" class="search"
-          placeholder="Search"
-          value=search
-          enter=(action "search")
-          required=true}}
+  <Input
+    @type="text"
+    class="search"
+    placeholder="Search"
+    @value={{search}}
+    @enter={{action "search"}}
+    required={{true}}
+  />
 </p>
