--- a/app/templates/category/index.hbs
+++ b/app/templates/category/index.hbs
@@ -1,9 +1,9 @@
 {{ title category.category ' - Categories' }}
 
 <div id='crates-heading'>
-  {{#link-to "categories" (html-attributes aria-label="Categories")}}{{svg-jar "crate"}}{{/link-to}}
+  <LinkTo @route="categories" aria-label="Categories">{{svg-jar "crate"}}</LinkTo>
   <h1>
-    {{#each category.parent_categories as |parent|}}{{link-to parent.category "category" parent.slug}}::{{/each}}
+    {{#each category.parent_categories as |parent|}}<LinkTo @route="category" @model={{parent.slug}}>{{parent.category}}</LinkTo>::{{/each}}
     {{~ category.category }}
   </h1>
 </div>
@@ -20,7 +20,7 @@
         <div class='row'>
           <div class='desc'>
             <div class='info'>
-              {{link-to subcategory.category "category" subcategory.slug}}
+              <LinkTo @route="category" @model={{subcategory.slug}}>{{subcategory.category}}</LinkTo>
               <span class='small'>
                 {{ pluralize (format-num subcategory.crates_cnt) "crate" }}
               </span>
@@ -49,53 +49,53 @@
 
   <div class='sort' data-test-category-sort>
     <span class='small'>Sort by</span>
-    {{#rl-dropdown-container class="dropdown-container"}}
-      {{#rl-dropdown-toggle tagName="a" class="dropdown" data-test-current-order=true}}
+    <RlDropdownContainer @class="dropdown-container">
+      <RlDropdownToggle @tagName="a" @class="dropdown" @data-test-current-order={{true}}>
         {{svg-jar "sort"}}
         {{ currentSortBy }}
         <span class='arrow'></span>
-      {{/rl-dropdown-toggle}}
+      </RlDropdownToggle>
 
-      {{#rl-dropdown tagName="ul" class="dropdown"}}
+      <RlDropdown @tagName="ul" @class="dropdown">
         <li>
-          {{#link-to (query-params sort="alpha")}}
+          <LinkTo @query={{hash sort="alpha"}}>
             Alphabetical
-          {{/link-to}}
+          </LinkTo>
         </li>
         <li>
-          {{#link-to (query-params sort="downloads")}}
+          <LinkTo @query={{hash sort="downloads"}}>
             All-Time Downloads
-          {{/link-to}}
+          </LinkTo>
         </li>
         <li>
-          {{#link-to (query-params sort="recent-downloads")}}
+          <LinkTo @query={{hash sort="recent-downloads"}}>
             Recent Downloads
-          {{/link-to}}
+          </LinkTo>
         </li>
         <li>
-          {{#link-to (query-params sort="recent-updates")}}
+          <LinkTo @query={{hash sort="recent-updates"}}>
             Recent Updates
-          {{/link-to}}
+          </LinkTo>
         </li>
-      {{/rl-dropdown}}
-    {{/rl-dropdown-container}}
+      </RlDropdown>
+    </RlDropdownContainer>
   </div>
 </div>
 
 <div id='crates' class='white-rows'>
   {{#each model as |crate|}}
-    {{crate-row crate=crate}}
+    <CrateRow @crate={{crate}} />
   {{/each}}
 </div>
 
 <div class='pagination'>
-  {{#link-to (query-params page=prevPage) class="prev" rel="prev" title="previous page"}}
+  <LinkTo @query={{hash page=prevPage}} class="prev" @rel="prev" @title="previous page">
     {{svg-jar "left-pag"}}
-  {{/link-to}}
+  </LinkTo>
   {{#each pages as |page|}}
-    {{#link-to (query-params page=page)}}{{ page }}{{/link-to}}
+    <LinkTo @query={{hash page=page}}>{{ page }}</LinkTo>
   {{/each}}
-  {{#link-to (query-params page=nextPage) class="next" rel="next" title="next page"}}
+  <LinkTo @query={{hash page=nextPage}} class="next" @rel="next" @title="next page">
     {{svg-jar "right-pag"}}
-  {{/link-to}}
+  </LinkTo>
 </div>
