--- a/app/templates/components/crate-list.hbs
+++ b/app/templates/components/crate-list.hbs
@@ -1,12 +1,12 @@
 <ol>
   {{#each crates as |crate index|}}
     <li>
-      {{#link-to 'crate' crate.id class='name' data-test-crate-link=index}}
+      <LinkTo @route="crate" @model={{crate.id}} class="name" data-test-crate-link={{index}}>
         <span>{{ crate.name }} ({{ crate.max_version }})</span>
         <div class='arrow-in-list'>
           {{svg-jar "right-arrow"}}
         </div>
-      {{/link-to}}
+      </LinkTo>
     </li>
   {{/each}}
 </ol>
