--- a/app/templates/components/link-to-dep.hbs
+++ b/app/templates/components/link-to-dep.hbs
@@ -1,6 +1,6 @@
-{{#link-to 'crate' dep.crate_id}}
+<LinkTo @route="crate" @model={{dep.crate_id}}>
   {{ dep.crate_id }} {{ format-req dep.req }}
-{{/link-to}}
+</LinkTo>
 {{#if dep.optional}}
   <span class='optional'>optional</span>
 {{/if}}
