--- a/app/templates/data-access.hbs
+++ b/app/templates/data-access.hbs
@@ -26,7 +26,7 @@
   </li>
   <li>
     <b>Crawl the crates.io API.</b> This should be used as a last resort, and
-    doing so is subject to our {{#link-to 'policies'}}crawling policy{{/link-to}}.
+    doing so is subject to our <LinkTo @route="policies">crawling policy</LinkTo>.
     If the index and the database dumps do not satisfy your needs, we're happy to
     discuss solutions that don't require you to crawl the registry.
     You can email us at <a href="mailto:help@crates.io">help@crates.io</a>.
