--- a/app/templates/policies.hbs
+++ b/app/templates/policies.hbs
@@ -113,7 +113,7 @@
 
 <p>
   Before resorting to crawling crates.io, please read
-  {{#link-to 'data-access'}}Accessing the Crates.io Data{{/link-to}}.
+  <LinkTo @route="data-access">Accessing the Crates.io Data</LinkTo>.
 </p>
 
 <p>
