--- a/app/templates/categories.hbs
+++ b/app/templates/categories.hbs
@@ -16,26 +16,26 @@
 
   <div class='sort' data-test-categories-sort>
     <span class='small'>Sort by</span>
-    {{#rl-dropdown-container class="dropdown-container"}}
-      {{#rl-dropdown-toggle tagName="a" class="dropdown" data-test-current-order=true}}
+    <RlDropdownContainer @class="dropdown-container">
+      <RlDropdownToggle @tagName="a" @class="dropdown" @data-test-current-order={{true}}>
         {{svg-jar "sort"}}
         {{ currentSortBy }}
         <span class='arrow'></span>
-      {{/rl-dropdown-toggle}}
+      </RlDropdownToggle>
 
-      {{#rl-dropdown tagName="ul" class="dropdown"}}
+      <RlDropdown @tagName="ul" @class="dropdown">
         <li>
-          {{#link-to (query-params sort="alpha")}}
+          <LinkTo @query={{hash sort="alpha"}}>
             Alphabetical
-          {{/link-to}}
+          </LinkTo>
         </li>
         <li>
-          {{#link-to (query-params sort="crates")}}
+          <LinkTo @query={{hash sort="crates"}}>
             # Crates
-          {{/link-to}}
+          </LinkTo>
         </li>
-      {{/rl-dropdown}}
-    {{/rl-dropdown-container}}
+      </RlDropdown>
+    </RlDropdownContainer>
   </div>
 </div>
 
@@ -44,7 +44,7 @@
     <div class='row' data-test-category={{category.slug}}>
       <div class='desc'>
         <div class='info'>
-          {{link-to category.category "category" category.slug}}
+          <LinkTo @route="category" @model={{category.slug}}>{{category.category}}</LinkTo>
           <span class='small' data-test-crate-count>
             {{ pluralize (format-num category.crates_cnt) "crate" }}
           </span>
@@ -60,13 +60,13 @@
 </div>
 
 <div class='pagination'>
-  {{#link-to (query-params page=prevPage) class="prev" rel="prev" title="previous page"}}
+  <LinkTo @query={{hash page=prevPage}} class="prev" @rel="prev" @title="previous page">
     {{svg-jar "left-pag"}}
-  {{/link-to}}
+  </LinkTo>
   {{#each pages as |page|}}
-    {{#link-to (query-params page=page)}}{{ page }}{{/link-to}}
+    <LinkTo @query={{hash page=page}}>{{ page }}</LinkTo>
   {{/each}}
-  {{#link-to (query-params page=nextPage) class="next" rel="next" title="next page"}}
+  <LinkTo @query={{hash page=nextPage}} class="next" @rel="next" @title="next page">
     {{svg-jar "right-pag"}}
-  {{/link-to}}
+  </LinkTo>
 </div>
