--- a/app/templates/components/crate-downloads-list.hbs
+++ b/app/templates/components/crate-downloads-list.hbs
@@ -1,13 +1,13 @@
 <ul>
   {{#each crates as |crate|}}
     <li>
-      {{#link-to 'crate' crate.id class='name'}}
+      <LinkTo @route="crate" @model={{crate.id}} class="name">
         {{ crate.name }} ({{ crate.max_version }})
         <div class='right'>
           {{svg-jar "download-clear-back"}}
           {{ format-num crate.downloads }}
         </div>
-      {{/link-to}}
+      </LinkTo>
     </li>
   {{/each}}
 </ul>
