Convert `@data-test` arguments to `data-test` attributes

--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -38,7 +38,7 @@
     <span class='small'>Sort by</span>
 
     <RlDropdownContainer @class="dropdown-container">
-      <RlDropdownToggle @tagName="a" @class="dropdown" @data-test-current-order={{true}}>
+      <RlDropdownToggle @tagName="a" @class="dropdown" data-test-current-order={{true}}>
         {{svg-jar "sort"}}
         {{ currentSortBy }}
         <span class='arrow'></span>
@@ -72,7 +72,7 @@
 
 <div id='crates' class='white-rows'>
   {{#each model as |crate index|}}
-    <CrateRow @crate={{crate}} @data-test-crate-row={{index}} />
+    <CrateRow @crate={{crate}} data-test-crate-row={{index}} />
   {{/each}}
 </div>
 
